k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ma-devops
  labels:
    environment: production
    app.kubernetes.io/part-of: ma-devops-suite
