k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ma-devops-backend-svc
  namespace: ma-devops
  labels:
    app: ma-devops-backend
    tier: api
    app.kubernetes.io/part-of: ma-devops-suite
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: ma-devops-backend
